awesome-bit should be running on PRs with delay (#74)
* awesome-bit should be running on PRs

* Update awesome-bot.yml

--- a/.github/workflows/awesome-bot.yml
+++ b/.github/workflows/awesome-bot.yml
@@ -1,6 +1,6 @@
 name: awesome-bot
 
-on: [push]
+on: [pull_request]
 
 jobs:
   awesome-bot-link-check:
@@ -9,4 +9,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: docker://dkhamsing/awesome_bot:latest
       with:
-        args: --allow-redirect /github/workspace/README.md
+        args: --allow-redirect /github/workspace/README.md --request-delay 1
